Correction to my overflow attribute

--- a/submissions/ogennaOgbogu/CSS/signupStylesheet.css
+++ b/submissions/ogennaOgbogu/CSS/signupStylesheet.css
@@ -7,8 +7,7 @@ html,body {
     height: 100%;
     margin: 0;
     padding: 0;
-    overflow-x: auto;
-    overflow-y: auto;
+    overflow: auto;
 }
 
 body {
